--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="Image\Title%20logo.png">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <title>Onederz</title>
     <link rel="stylesheet" href="tour.css">
 </head>
@@ -17,19 +18,19 @@
     <section id="selectiontour">
     <div class="container">
       <li class="list-tour">
-        <ul class="li-tour top-tour"><a href="#smalltour">Small Circuit</a></ul>
-        <ul class="li-tour"><a href="#grandtour">Grand Circuit</a></ul>
-        <ul class="li-tour"><a href="#banteaysrei">Banteay Srei</a></ul>
-        <ul class="li-tour"><a href="#bengmealea">Beng Mealea</a></ul>
-        <ul class="li-tour"><a href="#kohker">Koh Ker</a></ul>
-        <ul class="li-tour"><a href="#kampongphluk">Floating Village</a></ul>
-        <ul class="li-tour"><a href="#cyclingtour">Cycling Tour</a></ul>
-        <ul class="li-tour"><a href="#streetfoodtour">Street Food Tour</a></ul>
-        <ul class="li-tour"><a href="#phare">Phare-Circus</a></ul>
-        <ul class="li-tour"><a href="#cookingclass">Cooking Class</a></ul>
+        <ul class="li-tour top-tour"><a href="#smalltour">- Small Circuit</a></ul>
+        <ul class="li-tour"><a href="#grandtour">- Grand Circuit</a></ul>
+        <ul class="li-tour"><a href="#banteaysrei">- Banteay Srei</a></ul>
+        <ul class="li-tour"><a href="#bengmealea">- Beng Mealea</a></ul>
+        <ul class="li-tour"><a href="#kohker">- Koh Ker</a></ul>
+        <ul class="li-tour"><a href="#kampongphluk">- Floating Village</a></ul>
+        <ul class="li-tour"><a href="#cyclingtour">- Cycling Tour</a></ul>
+        <ul class="li-tour"><a href="#streetfoodtour">- Street Food Tour</a></ul>
+        <ul class="li-tour"><a href="#phare">- Phare-Circus</a></ul>
+        <ul class="li-tour"><a href="#ceramic">- Ceramic</a></ul>
+        <ul class="li-tour"><a href="#cookingclass">- Cooking Class</a></ul>
       </li>
-        <div id="smalltour">
-        <section>
+        <section  id="smalltour">
             <table>
                 <tr>
                     <td class="tittle"><b>Small Circuit</b></td>
@@ -113,9 +114,7 @@
             <p>You can purchase ticket on the way to the temple </br>or purchase online : <a href="https://www.angkorenterprise.gov.kh/"><font color="yellow"><b>angkorenterprise.gov.kh</b></font></a></p>
         </div>
         </section>
-        </div>
-        <div id="grandtour">
-            <section>
+            <section id="grandtour">
                 <table>
                     <tr>
                         <td class="tittle"><b>Grand Circuit</b></td>
@@ -196,9 +195,7 @@
             <p>You can purchase ticket on the way to the temple </br>or purchase online : <a href="https://www.angkorenterprise.gov.kh/"><font color="yellow"><b>angkorenterprise.gov.kh</b></font></a></p>
         </div>
             </section>
-            </div>
-            <div id="banteaysrei">
-            <section>
+            <section id="banteaysrei">
                 <h2 class="tittle"><b>Banteay Srei</b></h2>
                 <p class="discription">Banteay Srei is located 38km northeast of Siem Reap, but it is a must-see for temple buffs. While the temple is smaller than other temples, you will see intricate and well-preserved decorative carving on the structure.</p>
                 <div class="tshare-left">
@@ -241,9 +238,7 @@
                     <p>You can purchase ticket on the way to the temple or purchase online : <a href="https://www.angkorenterprise.gov.kh/"><font color="yellow"><b>angkorenterprise.gov.kh</b></font></a></p>
                 </div>
             </section>
-            </div>
-            <div id="bengmealea">
-                <section>
+                <section id="bengmealea">
                     <h2 class="tittle"><b>Beng Mealea</b></h2>
                     <p class="discription">Although Beng Mealea is a bit far from Siem Reap (70km), we highly recommend you visit here. On the contrary to Angkor Wat, which size is almost the same as Beng Mealea, this temple hasn't been fixed yet. However, that will make your tour full of adventure and mystery.</p>
                     <div class="tshare-left">
@@ -288,9 +283,7 @@
                         <p>You can purchase ticket on the way to the temple or purchase online : <a href="https://www.angkorenterprise.gov.kh/"><font color="yellow"><b>angkorenterprise.gov.kh</b></font></a></p>
                     </div>
                 </section>
-                </div>
-                <div id="kohker">
-                    <section>
+                    <section id="kohker">
                         <h2 class="tittle"><b>Koh Ker & Beng Mealea</b></h2>
                         <p class="discription">Koh Ker is located 130km from Siem Reap, and visiting there is easily combined with a trip to Beng Mealea. The main temple at Koh Ker is a 7-tier step-pyramid, and the views from the top are a very rewarding experience.</p>
                         <div class="tshare-left">
@@ -334,9 +327,7 @@
                             <p>You can purchase ticket on the way to the temple or purchase online : <a href="https://www.angkorenterprise.gov.kh/"><font color="yellow"><b>angkorenterprise.gov.kh</b></font></a></p>
                         </div>
                     </section>
-                    </div>
-                    <div id="kampongphluk">
-                        <section>
+                        <section id="kampongphluk">
                             <h2 class="tittle"><b>Floating Village (Kampong Phluk)</b></h2>
                             <p class="discription">Several communities of people are living on the Tonle Sap Lake. Kampong Phluk, which literally means "harbour of the tusks,"  is just over 30km from Siem Reap. You will see how the people live on the lake and the beautiful sunset on the lake. Going to the floating forest will cost you 5.5 USD per person since you have to get another small boat to go there.</p>
                             <div class="tshare-left">
@@ -403,9 +394,7 @@
   </section>
 </div>
             </section>
-        </div>
-        <div id="cyclingtour">
-            <section>
+            <section id="cyclingtour">
                 <h2 class="tittle"><b>Cycling Tour (Visit Countryside)</b></h2>
                 <p class="discription">This tour will be the best option for you if you want to see local lives and beautiful landscapes through the Siem Reap countryside. We make lots of stops to see the daily villages and farms and to enjoy some delicious local snacks. Let's explore the local villages with Onederz. You will know how beautiful Cambodia is.</p>
                 <div class="tshare-left">
@@ -452,9 +441,7 @@
 </section>
 </div>
         </section>
-        </div>
-        <div id="streetfoodtour">
-            <section>
+            <section id="streetfoodtour">
                 <h2 class="tittle"><b>Street Food Tour</b></h2>
                 <p class="discription">This tour will be the best option for you if you want to see local lives and beautiful landscapes through the Siem Reap countryside. We make lots of stops to see the daily villages and farms and to enjoy some delicious local snacks. Let's explore the local villages with Onederz. You will know how beautiful Cambodia is.</p>
                 <div class="tshare-left">
@@ -493,7 +480,6 @@
 </section>
 </div>
         </section>
-        </div>
         <div id="kulenwaterfall" class="hide">
             <section>
                 <h2 class="tittle"><b>Kulen Mountain Waterfalls</b></h2>
@@ -547,8 +533,7 @@
 </div>
         </section>
         </div>
-        <div id="phare">
-            <section>
+            <section id="phare">
                 <h2 class="tittle"><b>Phare The Cambodia Circus</b></h2>
                 <p class="discription">Siem Reap's most unique, authentic, and top-rated evening entertainment. More than just a circus, Phare performers use theater, music, dance, and modern circus arts to tell uniquely Cambodian stories, historical, folk, and modern. The young circus artists will astonish you with their energy, emotion, enthusiasm, and talent.</p>
                 <div class="tshare-left">
@@ -557,7 +542,9 @@
                         <td>Everyday</td>
                     </tr>
                 </table>
-                <table class="tour-price fade-table2">
+                <div class="card">
+                  <div class="card-front">
+                <table class="ceramic-price fade-table2">
                     <tr>
                         <td class="tprice"><b><font color="red">18 USD/person</font> (seat C)</b></td>
                     </tr>
@@ -577,6 +564,13 @@
                         <td></br>You have to be at the circus at least 30 miutes before the show start. It will cost 3 USD (1way) by Tuk Tuk to get there.</td>
                     </tr>
                 </table>
+              </div>
+              <div class="card-back">
+                <div class="pphare-pic">
+                  <img src="image\Seat-Map.png" class="phare-pic">
+                  </div>
+              </div>
+              </div>
                 </div>
 <div class="border-float">
 <section class="carousel">
@@ -592,13 +586,62 @@
 </dl>
 </section>
 </div>
-<div class="pphare-pic">
-<img src="image\Seat-Map.png" class="phare-pic fade-table2">
-</div>
         </section>
-        </div>
-        <div id="cookingclass">
-            <section>
+          <section id="ceramic">
+              <h2 class="tittle"><b>Khmer Ceramic</b></h2>
+              <p class="discription">The Khmer Ceramics & Fine Arts Centre, formerly known as the National Centre for Khmer Ceramics Revival, is an organization aiming to rediscover and reintroduce Khmer ancestral pottery techniques and support the development of contemporary Khmer ceramics art.</p></br>
+              <div class="tshare-left">
+              <div class="card">
+    <div class="card-front">
+              <table class="ceramic-price fade-table2">
+                  <tr>
+                      <td class="tprice"><b><font color="red">25 USD/person</font></b></td>
+                  </tr>
+                  <tr>
+                      <td><b>Morning Time</b></td>
+                      <td>: <b>8:00 am</b> and <b>10:00 am</b></td>
+                  </tr>
+                  <tr>
+                    <td><b>Afternoon Time</b></td>
+                    <td>: <b>2:00 pm</b> and <b>4:00 pm</b></td>
+                </tr>
+                  <tr>
+                      <td colspan="2"></br>*1h45 Pottery Class.</br>*Pottery demonstration.</br>*Make 5 pieces on the potter wheel.</br>*Carve your pieces with Cambodian Kbach.</br>*Get 1 fired piece the day after at 6pm.</br>*Get a Potters Diploma.</br>*Community Experience.</td>
+                  </tr>
+              </table>
+            </div>
+            <div class="card-back">
+<div class="ceramic-price ceramic-scan"><img src="image\ceramicqr.jpg" class="ceramicqr"><p class="ceramic-scan"><b>Scan For Booking</b></p></div>
+            </div>
+          </div>
+              </div>
+<div class="border-float">
+<section class="carousel">
+<dl class="carousel__viewport">
+<dt class="carousel__slide">
+<img src="image\ceremic1.jpg" class="kp-pic">
+<div class="carousel__snapper"></div>
+</dt>
+<dt class="carousel__slide">
+  <img src="image\ceremic5.jpg" class="kp-pic">
+  <div class="carousel__snapper"></div>
+  </dt>
+  <dt class="carousel__slide">
+<img src="image\ceremic3.jpg" class="kp-pic">
+<div class="carousel__snapper"></div>
+</dt>
+<dt class="carousel__slide">
+<img src="image\ceremic4.jpg" class="kp-pic">
+<div class="carousel__snapper"></div>
+</dt>
+<dt class="carousel__slide">
+<img src="image\ceremic2.jpg" class="kp-pic">
+<div class="carousel__snapper"></div>
+</dt>
+</dl>
+</section>
+      </section>
+            <section id="cookingclass">
                 <h2 class="tittle"><b>Khmer Cooking Class at a local's house</b></h2>
                 <p class="discription">Cambodia is known for its fascinating cuisine and colorful dishes. A trip to Siem Reap wouldn't be complete without at least having the chance to try their delicious food. On this special activity, you won't only get to try authentic Khmer food, but you will also learn how to cook their dishes! Experience walking around the local market to find fresh ingredients for the dishes before making your way to a local's house for the private cooking class.</p></br>
                 <div class="tshare-left">
@@ -638,23 +681,22 @@
 </section>
 </div>
         </section>
-        </div>
     </section>
     <section id="selectionbus">
         <div class="container">
 <li class="list-bus">
-  <ul class="li-bus top-bus"><a href="#phnompenh">Phnom Penh🏙️</a></ul>
-  <ul class="li-bus"><a href="#phnompenh-night">Phnom Penh🌃</a></ul>
-  <ul class="li-bus"><a href="#sihanoukville">Sihanoukville</a></ul>
-  <ul class="li-bus"><a href="#kr-krs">Koh Rong</a></ul>
-  <ul class="li-bus"><a href="#battambang">Battambang</a></ul>
-  <ul class="li-bus"><a href="#preahvihear">Preah Vihear</a></ul>
-  <ul class="li-bus"><a href="#stuengtreng">Stueng Treng</a></ul>
-  <ul class="li-bus"><a href="#rattanakiri">Rattanakiri</a></ul>
-  <ul class="li-bus"><a href="#mondolkiri">Mondulkiri</a></ul>
-  <ul class="li-bus"><a href="#kampot">Kampot</a></ul>
-  <ul class="li-bus"><a href="#bangkok">Bangkok</a></ul>
-  <ul class="li-bus"><a href="#hochiminh">Ho Chi Minh</a></ul>
+  <ul class="li-bus top-bus"><a href="#phnompenh">- Phnom Penh🏙️</a></ul>
+  <ul class="li-bus"><a href="#phnompenh-night">- Phnom Penh🌃</a></ul>
+  <ul class="li-bus"><a href="#sihanoukville">- Sihanoukville</a></ul>
+  <ul class="li-bus"><a href="#kr-krs">- Koh Rong</a></ul>
+  <ul class="li-bus"><a href="#battambang">- Battambang</a></ul>
+  <ul class="li-bus"><a href="#preahvihear">- Preah Vihear</a></ul>
+  <ul class="li-bus"><a href="#stuengtreng">- Stueng Treng</a></ul>
+  <ul class="li-bus"><a href="#rattanakiri">- Rattanakiri</a></ul>
+  <ul class="li-bus"><a href="#mondolkiri">- Mondulkiri</a></ul>
+  <ul class="li-bus"><a href="#kampot">- Kampot</a></ul>
+  <ul class="li-bus"><a href="#bangkok">- Bangkok</a></ul>
+  <ul class="li-bus"><a href="#hochiminh">- Ho Chi Minh</a></ul>
 </li>
           <section id="phnompenh">
             <h1>To Phnom Penh (Day Bus)</h1>
@@ -696,7 +738,7 @@
                 <tr class="bus-border">
                   <td>08:45 AM</td>
                   <td rowspan="3" class="bus-border">6 hours</td>
-                  <td rowspan="3">17 USD</td>
+                  <td rowspan="3">14 USD</td>
                 </tr>
                 <tr class="bus-border">
                     <td>09:45 AM</td>
@@ -778,7 +820,7 @@
               <tr class="bus-border">
                 <td>10:00 PM</td>
                 <td rowspan="2" class="bus-border">6 hours</td>
-                <td rowspan="2">17 USD</td>
+                <td rowspan="2">14 USD</td>
               </tr>
               <tr class="bus-border">
                   <td>10:30 PM</td>
@@ -811,7 +853,7 @@
                 <tr class="bus-border">
                   <td>10:00 PM</td>
                   <td rowspan="1" class="bus-border">11 hours</td>
-                  <td rowspan="1">28 USD</td>
+                  <td rowspan="1">22 USD</td>
                 </tr>
               </table>
               <table class="bustable-2row">
@@ -1114,7 +1156,7 @@
                       <tr class="bus-border">
                         <td>10:30 PM</td>
                         <td rowspan="" class="bus-border">12 hours</td>
-                        <td rowspan="">25 USD</td>
+                        <td rowspan="">20 USD</td>
                       </tr>
                 </table>
                 <Div class="scroll-icon-up" style="width: 2em; height: 2em; background-color: transparent; z-index: 80; 
@@ -1143,8 +1185,8 @@
                       </tr>
                       <tr class="bus-border">
                         <td>07:45 AM</td>
-                        <td rowspan="2" class="bus-border">9 hours</td>
-                        <td rowspan="2">43 USD</td>
+                        <td rowspan="2" class="bus-border">10 hours</td>
+                        <td rowspan="2">34 USD</td>
                       </tr>
                       <tr class="bus-border">
                         <td>09:00 AM
@@ -1166,8 +1208,8 @@
                           </tr>
                     <tr class="bus-border">
                       <td>08:00 AM</td>
-                      <td rowspan="" class="bus-border">9 hours</td>
-                      <td rowspan="">24.50 USD</td>
+                      <td rowspan="" class="bus-border">10 hours</td>
+                      <td rowspan="">29 USD</td>
                     </tr>
                   </table>
                   <table class="bustable-3row">
@@ -1184,8 +1226,8 @@
                       </tr>
                     <tr class="bus-border">
                       <td>10:00 AM</td>
-                      <td rowspan="" class="bus-border">9 hours</td>
-                      <td rowspan="">27 USD</td>
+                      <td rowspan="" class="bus-border">10 hours</td>
+                      <td rowspan="">32 USD</td>
                     </tr>
                   </tr>
               </table>
@@ -1255,7 +1297,7 @@
                     <td>08:00 AM</td>
                   </tr>
                   <tr class="bus-border">
-                    <td>10:00 AM</td>
+                    <td>11:00 AM</td>
                   </tr>
                   <tr class="bus-border">
                     <td>12:00 PM</td>
@@ -1264,7 +1306,7 @@
                     <td>01:30 PM</td>
                   </tr>
                   <tr class="bus-border">
-                    <td>04:00 PM</td>
+                    <td>04:30 PM</td>
                   </tr>
                   <tr class="bus-border">
                     <td>07:00 PM</td>
@@ -1288,9 +1330,39 @@
                     <td colspan="4">Taxi can accommodate 3 to 4 people.</td>
                   </tr>
                 </table>
-            </section>  
+            </section>
+            <button class="fullscreen" onclick="openFullscreen();"><p class="btn-open-top">˹ ˺</p><p class="btn-open-bottom">˻ ˼</p></button>
+            <button class="unfullscreen" onclick="closeFullscreen();"><p class="btn-close-top">˼ ˻</p><p class="btn-close-bottom">˺ ˹</p></button>
     </section>
 </div>
 </div>
+<script>
+  $('.card').click(function(e){
+    e.preventDefault();
+    $(this).toggleClass('flipped');
+})
+
+// Using JavaScript to open the page in fullscreen mode
+var elem = document.documentElement;
+function openFullscreen() {
+  if (elem.requestFullscreen) {
+    elem.requestFullscreen();
+  } else if (elem.webkitRequestFullscreen) { /* Safari */
+    elem.webkitRequestFullscreen();
+  } else if (elem.msRequestFullscreen) { /* IE11 */
+    elem.msRequestFullscreen();
+  }
+}
+
+function closeFullscreen() {
+  if (document.exitFullscreen) {
+    document.exitFullscreen();
+  } else if (document.webkitExitFullscreen) { /* Safari */
+    document.webkitExitFullscreen();
+  } else if (document.msExitFullscreen) { /* IE11 */
+    document.msExitFullscreen();
+  }
+}
+</script>
 </body>
 </html>
